--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -1,66 +1,73 @@
-<div class="grid-block horizontal">
-    <div class="grid-content large-5">
 
-    </div>
-    <div class="grid-content large-7">
-        <div class="grid-block vertical">
+<div class="grid-content">
+    <div class="grid-block horizontal">
+
+        <div class="large-4 medium-grid-content sidebar vertical panel panel-left" ng-class="positionClass" ng-transclude="" zf-panel="" id="leftSidebar" zf-closable="panel">
             <div class="grid-content">
-                <h4><img src="http://placehold.it/30x30"> Cady Heron</h4>
-
-                <p>Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie
-                    magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris
-                    iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam
-                    at risus et justo dignissim congue.</p>
-                <hr>
-                <h4><img src="http://placehold.it/30x30"> Kevin Gnapoor</h4>
-
-                <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend
-                    nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl
-                    tempor. Suspendisse dictum feugiat.</p>
-                <hr>
-                <h4><img src="http://placehold.it/30x30"> Cady Heron</h4>
-
-                <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend
-                    nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl
-                    tempor. Suspendisse dictum feugiat.</p>
-                <hr>
-                <h4><img src="http://placehold.it/30x30"> Trang Pak</h4>
-
-                <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend
-                    nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl
-                    tempor. Suspendisse dictum feugiat.</p>
-                <hr>
-                <h4><img src="http://placehold.it/30x30"> Coach Carr</h4>
-
-                <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend
-                    nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl
-                    tempor. Suspendisse dictum feugiat.</p>
-                <hr>
-                <h4><img src="http://placehold.it/30x30"> Cady Heron</h4>
-
-                <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend
-                    nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl
-                    tempor. Suspendisse dictum feugiat.</p>
-                <hr>
-                <h4><img src="http://placehold.it/30x30"> Trang Pak</h4>
-
-                <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend
-                    nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl
-                    tempor. Suspendisse dictum feugiat.</p>
-                <hr>
-                <h4><img src="http://placehold.it/30x30"> Cady Heron</h4>
-
-                <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend
-                    nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl
-                    tempor. Suspendisse dictum feugiat.</p>
-                <hr>
-            </div>
-            <div class="message-input grid-content collapse shrink">
-<span class="inline-label">
-<input type="text" placeholder="Message">
-<a href="#" class="button">Send</a>
-</span>
+                <a zf-close="" class="close-button hide-for-medium">×</a>
+                <section class="block-list conversation-user-block-list">
+                    <header class="title custom-header conversation-header-background">
+                        Conversations
+                    </header>
+                    <div class="history" ksw-dynamic-height parent=".ksw-content" reduce="70">
+                        <div class="grid-content message-history" data-ng-repeat="message in messages">
+                            <img data-ng-src="{{getProfilePictureThumbnail(message.participants[0]._id)}}" alt=""/>
+                            <div class="content">
+                                {{message.lastMessage}}
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
+
+        <div class="large-4 grid-content">
+            <a class="small secondary expand button hide-for-medium" zf-toggle="leftSidebar">Show Conversations</a>
+            <a class="small secondary expand button hide-for-medium" zf-toggle="rightSidebar">Show People</a>
+            <div class="grid-container conversation">
+                <section class="block-list conversation-user-block-list">
+                    <header class="title custom-header message-header-background">
+                        Mohammad Faisal
+                    </header>
+                    <div class="history" ksw-dynamic-height parent=".ksw-content" reduce="170">
+                        <div class="grid-content message-history" data-ng-repeat="message in messages">
+                            <img data-ng-src="{{getProfilePictureThumbnail(message.participants[0]._id)}}" alt=""/>
+                            <div class="content">
+                                {{message.lastMessage}}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="newMessage">
+                        <textarea autofocus="" placeholder="Type here new message"></textarea>
+                        <a href="" class="button success">Reply</a>
+                    </div>
+                </section>
+            </div>
+
+        </div>
+
+        <div class="large-4 medium-grid-content sidebar vertical panel panel-left" ng-class="positionClass" ng-transclude="" zf-panel="" id="rightSidebar" zf-closable="panel">
+            <div class="grid-content">
+
+                <section class="block-list conversation-user-block-list">
+                    <header class="title custom-header people-header-background">
+                        People <span><a zf-close="" class="close-button hide-for-medium">×</a></span>
+                    </header>
+                    <div class="history" ksw-dynamic-height parent=".ksw-content" reduce="70">
+                        <div class="grid-content message-history" data-ng-repeat="connection in personalConnections">
+                            <img data-ng-src="{{connection | kswImageFilter: 60:connection._id}}" alt="{{connection.title}}"/>
+                            <div class="content">
+                                {{connection.title}}
+                            </div>
+                            <div class="content email">
+                                {{connection.email}}
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+
     </div>
 </div>
